--- a/ClashMeta.yaml
+++ b/ClashMeta.yaml
@@ -1,3 +1,11 @@
+#==========================================
+# @ConfigName    Clash.Meta 配置文件（基于墨鱼原版修改）
+# @Author            @Chill_1031
+# @UpdateTime        2025/06/10 8:45 UTC/GMT +8
+# @Function          支持手动选择、自动测速、广告屏蔽、兜底分流、按国家分组节点、多机场订阅等，配置同样适用ClashVerge   
+# @Thanks            @blackmatrix7, @Fndroid, @Anti
+# @ConfigVersion     1.0.1
+#==========================================
 port: 7890
 socks-port: 7891
 redir-port: 7892
