--- a/ClashMeta.yaml
+++ b/ClashMeta.yaml
@@ -1,6 +1,6 @@
 #==========================================
 # @ConfigName    Clash.Meta 配置文件（基于墨鱼原版修改）
-# @Author            @Chill_1031
+# @Author            @Chill-lucky
 # @UpdateTime        2025/06/10 8:45 UTC/GMT +8
 # @Function          支持手动选择、自动测速、广告屏蔽、兜底分流、按国家分组节点、多机场订阅等，配置同样适用ClashVerge   
 # @Thanks            @blackmatrix7, @Fndroid, @Anti
