--- a/ClashMeta.yaml
+++ b/ClashMeta.yaml
@@ -3,12 +3,21 @@
 # @Author @Chill-lucky
 # @UpdateTime 2025/06/10 8:45 UTC/GMT +8
 # @Function 
-# 支持订阅链接自动更新
-# 支持所有规则自动更新，无需频繁修改配置文件，内置PT域名直连、代理规则；
-# 支持手动选择、自动测速、广告屏蔽、兜底分流、按国家分组节点、多机场订阅等；
-# 配置适用于Clash Verge (Meta 内核) 、Clash for Windows (Meta 内核) 、ClashMetaForAndroid (CMFA) 、Clash.Meta CLI 、ElectronBot / MetaClash
-# @Thanks @blackmatrix7, @Fndroid, @Anti, @ddgksf2013
+支持订阅链接自动更新
+支持所有规则自动更新，无需频繁修改配置文件，内置PT域名直连、代理规则；
+支持手动选择、自动测速、广告屏蔽、兜底分流、按国家分组节点、多机场订阅等；
+配置适用于Clash Verge (Meta 内核) 、Clash for Windows (Meta 内核) 、ClashMetaForAndroid (CMFA) 、Clash.Meta CLI 、ElectronBot / MetaClash
+# @Thanks @blackmatrix7, @Fndroid, @Anti
 # @ConfigVersion 1.0.1
+
+#nikki配置更新2025.6.12
+#update.测速通道更新，更新ipv6延迟测速采用单独ipv6测速通道，国内本地主机测速更新为小米的直连探测服务，不受 DNS 污染影响
+#update.优化日志等级为error，减少日志输出性能占用
+#update.更新订阅屏蔽词正则表达式，匹配大小写
+#update.提高个别分组节点自动切换容忍度，避免频繁切换节点
+#update.删除部分策略组重复测速
+#update.PT代理直连规则更新
+#update.更新DNS去除重IP，防止DNS请求冗余
 #==========================================
 port: 7890
 socks-port: 7891
@@ -17,7 +26,7 @@ mixed-port: 7893
 allow-lan: true
 bind-address: "*"
 mode: rule
-log-level: info
+log-level: error
 ipv6: true
 external-controller: 127.0.0.1:9090
 
@@ -40,9 +49,8 @@ dns:
     - "*.blzstatic.cn"
     - "*.battle.net"
   nameserver:
-    - 223.5.5.5
-    - 119.29.29.29
     - https://223.5.5.5/dns-query
+    - 119.29.29.29
   fallback:
     - https://cloudflare-dns.com/dns-query
     - https://dns.google/dns-query
@@ -56,10 +64,10 @@ dns:
 proxy-providers:
   Sub1:
     type: http
-    url: 手动填写订阅链接
+    url: 手动填写你的机场订阅链接
     interval: 86400
     path: ./proxy_providers/sub1.yaml
-    filter: "^(?!.*(距离|剩余|套餐|订阅|总计|已用|官网|设置|Expire|客服|禁止|访问)).*"
+    filter: "^(?i)(?!.*(距离|剩余|套餐|订阅|总计|已用|官网|设置|Expire|客服|禁止|访问)).*"
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
@@ -70,7 +78,7 @@ proxy-providers:
     url: 
     interval: 86400
     path: ./proxy_providers/sub2.yaml
-    filter: "^(?!.*(距离|剩余|套餐|订阅|总计|已用|官网|设置|Expire|客服|禁止|访问)).*"
+    filter: "^(?i)(?!.*(距离|剩余|套餐|订阅|总计|已用|官网|设置|Expire|客服|禁止|访问)).*"
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
@@ -81,7 +89,7 @@ proxy-providers:
     url: 
     interval: 86400
     path: ./proxy_providers/sub3.yaml
-    filter: "^(?!.*(距离|剩余|套餐|订阅|总计|已用|官网|设置|Expire|客服|禁止|访问)).*"
+    filter: "^(?i)(?!.*(距离|剩余|套餐|订阅|总计|已用|官网|设置|Expire|客服|禁止|访问)).*"
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
@@ -92,7 +100,7 @@ proxy-providers:
     url: 
     interval: 86400
     path: ./proxy_providers/sub4.yaml
-    filter: "^(?!.*(距离|剩余|套餐|订阅|总计|已用|官网|设置|Expire|客服|禁止|访问)).*"
+    filter: "^(?i)(?!.*(距离|剩余|套餐|订阅|总计|已用|官网|设置|Expire|客服|禁止|访问)).*"
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
@@ -103,7 +111,7 @@ proxy-providers:
     url: 
     interval: 86400
     path: ./proxy_providers/sub5.yaml
-    filter: "^(?!.*(距离|剩余|套餐|订阅|总计|已用|官网|设置|Expire|客服|禁止|访问)).*"
+    filter: "^(?i)(?!.*(距离|剩余|套餐|订阅|总计|已用|官网|设置|Expire|客服|禁止|访问)).*"
     health-check:
       enable: true
       url: http://www.gstatic.com/generate_204
@@ -114,7 +122,7 @@ proxy-groups:
   - name: 🇨🇳 站点直连
     type: select
     proxies: 
-      - DIRECT
+      - 🇨🇳 直连节点
       - 🇺🇲 美国节点
       - 🌏 全球加速
       - ♻️ 自动选择
@@ -135,7 +143,7 @@ proxy-groups:
       - 🇯🇵 日本节点
       - 🇨🇳 台湾节点
       - 🇸🇬 狮城节点
-      - DIRECT
+      - 🇨🇳 直连节点
 
   - name: 📹Emby库
     type: select
@@ -146,6 +154,9 @@ proxy-groups:
       - Sub4
       - Sub5
     filter: "EMBY|Emby|Em"
+    url: http://www.gstatic.com/generate_204	
+    interval: 300
+    tolerance: 150
 
   - name: 📮 IPV6节点
     type: url-test
@@ -156,14 +167,14 @@ proxy-groups:
       - Sub4
       - Sub5
     filter: "v6|ipv6|IPV6"
-    url: http://www.gstatic.com/generate_204
+    url: http://[2606:4700:4700::1111]/generate_204
     interval: 300
     tolerance: 150
 
   - name: 🍎 苹果服务
     type: select
     proxies:
-      - DIRECT
+      - 🇨🇳 直连节点
       - 🌏 全球加速
       - ♻️ 自动选择
       - 🚀 手动切换
@@ -175,7 +186,7 @@ proxy-groups:
 
   - name: 📺 哔哩哔哩
     type: select
-    proxies: ["🇭🇰 香港节点", "🇨🇳 台湾节点", "DIRECT"]
+    proxies: ["🇭🇰 香港节点", "🇨🇳 台湾节点", "🇨🇳 直连节点"]
 
   - name: 🤖 OpenAi
     type: select
@@ -257,9 +268,6 @@ proxy-groups:
       - Sub3
       - Sub4
       - Sub5
-    url: http://www.gstatic.com/generate_204
-    interval: 900
-    lazy: true
 
   - name: ♻️ 自动选择
     type: url-test
@@ -271,7 +279,7 @@ proxy-groups:
       - Sub5
     url: http://www.gstatic.com/generate_204
     interval: 900
-    lazy: true
+    tolerance: 150
 
   - name: 🇭🇰 香港节点
     type: url-test
@@ -349,7 +357,7 @@ proxy-groups:
       - 🇨🇳 台湾节点
       - 🇸🇬 狮城节点
 
-  - name: 🛠 直连节点
+  - name: 🇨🇳 直连节点
     type: url-test
     proxies:
       - DIRECT
@@ -361,7 +369,7 @@ proxy-groups:
     type: select
     proxies: 
       - REJECT
-      - DIRECT
+      - 🇨🇳 直连节点
 
   - name: 🐟 兜底分流
     type: select
@@ -374,7 +382,7 @@ proxy-groups:
       - 🇨🇳 台湾节点
       - 🇸🇬 狮城节点
       - 📮 IPV6节点
-      - DIRECT
+      - 🇨🇳 直连节点
 
 rule-providers:
   Ad:
@@ -543,12 +551,9 @@ rules:
   - RULE-SET,Twitter,🌏 全球加速
   - RULE-SET,Game,🎮 游戏平台
   - RULE-SET,ProxyLite,🌏 全球加速
-  - RULE-SET,Direct,DIRECT
-  - RULE-SET,Lan,DIRECT
-  - RULE-SET,Download,DIRECT
-  - RULE-SET,ChinaIP,DIRECT
-  - GEOIP,CN,DIRECT
-  - MATCH,🐟 兜底分流
-  - RULE-SET,ChinaIP,DIRECT
-  - GEOIP,CN,DIRECT
+  - RULE-SET,Direct,🇨🇳 直连节点
+  - RULE-SET,Lan,🇨🇳 直连节点
+  - RULE-SET,Download,🇨🇳 直连节点
+  - RULE-SET,ChinaIP,🇨🇳 直连节点
+  - GEOIP,CN,🇨🇳 直连节点
   - MATCH,🐟 兜底分流
