Add piggo.me to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -114,6 +114,7 @@ HOST-SUFFIX,hdmayi.com,DIRECT
 HOST-SUFFIX,hdmonkey.org,DIRECT
 HOST-SUFFIX,hdol.cn,DIRECT
 HOST-SUFFIX,hdonly.org,DIRECT
+HOST-SUFFIX,piggo.me,DIRECT
 HOST-SUFFIX,pt.hdpost.top,DIRECT
 HOST-SUFFIX,hdroute.org,DIRECT
 HOST-SUFFIX,hdsens.com,DIRECT
