Add pterclub.net to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -193,6 +193,7 @@ HOST-SUFFIX,pornbay.org,DIRECT
 HOST-SUFFIX,pretome.info,DIRECT
 HOST-SUFFIX,privatehd.to,DIRECT
 HOST-SUFFIX,proaudiotorrents.org,DIRECT
+HOST-SUFFIX,pterclub.net,DIRECT
 HOST-SUFFIX,pterclub.com,DIRECT
 HOST-SUFFIX,ptfans.org,DIRECT
 HOST-SUFFIX,ptfiles.net,DIRECT
