Add m-team.io to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -153,6 +153,7 @@ HOST-SUFFIX,libble.me,DIRECT
 HOST-SUFFIX,linkomanija.net,DIRECT
 HOST-SUFFIX,losslessclub.com,DIRECT
 HOST-SUFFIX,lst.gg,DIRECT
+HOST-SUFFIX,m-team.io,DIRECT
 HOST-SUFFIX,m00n.one,DIRECT
 HOST-SUFFIX,madsrevolution.net,DIRECT
 HOST-SUFFIX,magico.info,DIRECT
