--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -24,6 +24,7 @@ HOST-SUFFIX,animetosho.org,DIRECT
 HOST-SUFFIX,anirena.com,DIRECT
 HOST-SUFFIX,anisource.net,DIRECT
 HOST-SUFFIX,anthelion.me,DIRECT
+HOST-SUFFIX,api.m-team.io,DIRECT
 HOST-SUFFIX,asiancinema.me,DIRECT
 HOST-SUFFIX,audiences.me,DIRECT
 HOST-SUFFIX,audiobookbay.is,DIRECT
@@ -153,7 +154,6 @@ HOST-SUFFIX,libble.me,DIRECT
 HOST-SUFFIX,linkomanija.net,DIRECT
 HOST-SUFFIX,losslessclub.com,DIRECT
 HOST-SUFFIX,lst.gg,DIRECT
-HOST-SUFFIX,m-team.io,DIRECT
 HOST-SUFFIX,m00n.one,DIRECT
 HOST-SUFFIX,madsrevolution.net,DIRECT
 HOST-SUFFIX,magico.info,DIRECT
