Add sunnypt.top to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -237,6 +237,7 @@ HOST-SUFFIX,sportscult.org,DIRECT
 HOST-SUFFIX,springsunday.net,DIRECT
 HOST-SUFFIX,star-space.net,DIRECT
 HOST-SUFFIX,sugoimusic.me,DIRECT
+HOST-SUFFIX,sunnypt.top,DIRECT
 HOST-SUFFIX,superbits.org,DIRECT
 HOST-SUFFIX,swarmazon.club,DIRECT
 HOST-SUFFIX,tapochek.net,DIRECT
