Add ubits.club to HOST-SUFFIX entries

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -263,6 +263,7 @@ HOST-SUFFIX,totheglory.im,DIRECT
 HOST-SUFFIX,trancetraffic.com,DIRECT
 HOST-SUFFIX,trezzor.org,DIRECT
 HOST-SUFFIX,tu88.men,DIRECT
+HOST-SUFFIX,ubits.club,DIRECT
 HOST-SUFFIX,u2.dmhy.org,DIRECT
 HOST-SUFFIX,uhdbits.org,DIRECT
 HOST-SUFFIX,uniongang.tv,DIRECT
