--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -194,6 +194,7 @@ HOST-SUFFIX,pornbay.org,DIRECT
 HOST-SUFFIX,pretome.info,DIRECT
 HOST-SUFFIX,privatehd.to,DIRECT
 HOST-SUFFIX,proaudiotorrents.org,DIRECT
+HOST-SUFFIX,ptchdbits.co,DIRECT
 HOST-SUFFIX,pterclub.net,DIRECT
 HOST-SUFFIX,pterclub.com,DIRECT
 HOST-SUFFIX,ptfans.org,DIRECT
