--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -186,6 +186,7 @@ HOST-SUFFIX,ourbits.club,DIRECT
 HOST-SUFFIX,pandapt.net,DIRECT
 HOST-SUFFIX,passthepopcorn.me,DIRECT
 HOST-SUFFIX,peers.fm,DIRECT
+HOST-SUFFIX,pthome.net,DIRECT
 HOST-SUFFIX,piggo.co,DIRECT
 HOST-SUFFIX,piratethenet.org,DIRECT
 HOST-SUFFIX,pixelhd.me,DIRECT
