--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -7,6 +7,7 @@ HOST-SUFFIX,1337x.to,DIRECT
 HOST-SUFFIX,1ptba.com,DIRECT
 HOST-SUFFIX,2xfree.org,DIRECT
 HOST-SUFFIX,52pt.site,DIRECT
+HOST-SUFFIX,52movie.top,DIRECT
 HOST-SUFFIX,abtorrents.me,DIRECT
 HOST-SUFFIX,acg.rip,DIRECT
 HOST-SUFFIX,acidlounge.it,DIRECT
