Add hdcity.city to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -106,6 +106,7 @@ HOST-SUFFIX,hdatmos.club,DIRECT
 HOST-SUFFIX,hdbits.org,DIRECT
 HOST-SUFFIX,hdcenter.net,DIRECT
 HOST-SUFFIX,hdchina.org,DIRECT
+HOST-SUFFIX,hdcity.city,DIRECT
 HOST-SUFFIX,hdcity.leniter.org,DIRECT
 HOST-SUFFIX,hddolby.com,DIRECT
 HOST-SUFFIX,hd-evo.com,DIRECT
