--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -198,6 +198,7 @@ HOST-SUFFIX,pretome.info,DIRECT
 HOST-SUFFIX,privatehd.to,DIRECT
 HOST-SUFFIX,proaudiotorrents.org,DIRECT
 HOST-SUFFIX,ptcafe.club,DIRECT
+HOST-SUFFIX,ptchina.org,DIRECT
 HOST-SUFFIX,ptchdbits.co,DIRECT
 HOST-SUFFIX,pterclub.net,DIRECT
 HOST-SUFFIX,pterclub.com,DIRECT
