--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -205,6 +205,7 @@ HOST-SUFFIX,pterclub.com,DIRECT
 HOST-SUFFIX,ptfans.org,DIRECT
 HOST-SUFFIX,ptfiles.net,DIRECT
 HOST-SUFFIX,pt.msg.vg,DIRECT
+HOST-SUFFIX,ptlgs.org,DIRECT
 HOST-SUFFIX,ptsbao.club,DIRECT
 HOST-SUFFIX,pt.skit.me,DIRECT
 HOST-SUFFIX,pttime.org,DIRECT
