--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -40,7 +40,6 @@ HOST-SUFFIX,hdsens.com,DIRECT
 HOST-SUFFIX,hdsky.me,DIRECT
 HOST-SUFFIX,hdstreet.club,DIRECT
 HOST-SUFFIX,hdtime.org,DIRECT
-HOST-SUFFIX,pt.hdupt.com,DIRECT
 HOST-SUFFIX,hdvideo.one,DIRECT
 HOST-SUFFIX,hdzone.me,DIRECT
 HOST-SUFFIX,hhanclub.top,DIRECT
@@ -54,6 +53,7 @@ HOST-SUFFIX,pt.keepfrds.com,DIRECT
 HOST-SUFFIX,kingshome.top,DIRECT
 HOST-SUFFIX,lemonhd.org,DIRECT
 HOST-SUFFIX,m-team.cc,DIRECT
+HOST-SUFFIX,m-team.io,DIRECT
 HOST-SUFFIX,mocat.c,DIRECT
 HOST-SUFFIX,momentpt.net,DIRECT
 HOST-SUFFIX,nanyangpt.com,DIRECT
@@ -67,7 +67,11 @@ HOST-SUFFIX,open.cd,DIRECT
 HOST-SUFFIX,oshen.win,DIRECT
 HOST-SUFFIX,ourbits.club,DIRECT
 HOST-SUFFIX,pandapt.net,DIRECT
+HOST-SUFFIX,piggo.me,DIRECT
+HOST-SUFFIX,pt.hdupt.com,DIRECT
+HOST-SUFFIX,ptchdbits.co,DIRECT
 HOST-SUFFIX,pterclub.com,DIRECT
+HOST-SUFFIX,pterclub.net,DIRECT
 HOST-SUFFIX,ptfans.org,DIRECT
 HOST-SUFFIX,ptfiles.net,DIRECT
 HOST-SUFFIX,pt.msg.vg,DIRECT
@@ -85,9 +89,11 @@ HOST-SUFFIX,pt.soulvoice.club,DIRECT
 HOST-SUFFIX,springsunday.net,DIRECT
 HOST-SUFFIX,star-space.net,DIRECT
 HOST-SUFFIX,sugoimusic.me,DIRECT
+HOST-SUFFIX,sunnypt.top,DIRECT
 HOST-SUFFIX,tjupt.org,DIRECT
 HOST-SUFFIX,totheglory.im,DIRECT
 HOST-SUFFIX,tu88.men,DIRECT
+HOST-SUFFIX,ubits.club,DIRECT
 HOST-SUFFIX,unipt.org,DIRECT
 HOST-SUFFIX,yemapt.org,DIRECT
 HOST-SUFFIX,zhixing.bjtu.edu.cn,DIRECT
