--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -3,6 +3,7 @@
 # Policy: DIRECT
 # Total: ~90 Sites
 # ==================================
+HOST-SUFFIX,1ptba.com,DIRECT
 HOST-SUFFIX,52pt.site,DIRECT
 HOST-SUFFIX,acg.rip,DIRECT
 HOST-SUFFIX,audiences.me,DIRECT
@@ -78,6 +79,7 @@ HOST-SUFFIX,pt.msg.vg,DIRECT
 HOST-SUFFIX,ptsbao.club,DIRECT
 HOST-SUFFIX,pt.skit.me,DIRECT
 HOST-SUFFIX,pttime.org,DIRECT
+HOST-SUFFIX,pthome.net,DIRECT
 HOST-SUFFIX,railgunpt.com,DIRECT
 HOST-SUFFIX,rainbowisland.net,DIRECT
 HOST-SUFFIX,redleaves.cc,DIRECT
