--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -5,6 +5,7 @@
 # ==================================
 HOST-SUFFIX,1ptba.com,DIRECT
 HOST-SUFFIX,52pt.site,DIRECT
+HOST-SUFFIX,52movie.top,DIRECT
 HOST-SUFFIX,acg.rip,DIRECT
 HOST-SUFFIX,audiences.me,DIRECT
 HOST-SUFFIX,azusa.wiki,DIRECT
@@ -96,6 +97,7 @@ HOST-SUFFIX,tjupt.org,DIRECT
 HOST-SUFFIX,totheglory.im,DIRECT
 HOST-SUFFIX,tu88.men,DIRECT
 HOST-SUFFIX,ubits.club,DIRECT
+HOST-SUFFIX,ultrahd.net,DIRECT
 HOST-SUFFIX,unipt.org,DIRECT
 HOST-SUFFIX,yemapt.org,DIRECT
 HOST-SUFFIX,zhixing.bjtu.edu.cn,DIRECT
