Add new HOST-SUFFIX entry for hdcity.city

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -37,6 +37,7 @@ HOST-SUFFIX,hdmayi.com,DIRECT
 HOST-SUFFIX,hdol.cn,DIRECT
 HOST-SUFFIX,hdonly.org,DIRECT
 HOST-SUFFIX,pt.hdpost.top,DIRECT
+HOST-SUFFIX,hdcity.city,DIRECT
 HOST-SUFFIX,hdroute.org,DIRECT
 HOST-SUFFIX,hdsens.com,DIRECT
 HOST-SUFFIX,hdsky.me,DIRECT
