--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -73,10 +73,13 @@ HOST-SUFFIX,ourbits.club,DIRECT
 HOST-SUFFIX,pandapt.net,DIRECT
 HOST-SUFFIX,piggo.me,DIRECT
 HOST-SUFFIX,pt.hdupt.com,DIRECT
+HOST-SUFFIX,ptchina.org,DIRECT
+HOST-SUFFIX,ptcafe.club,DIRECT
 HOST-SUFFIX,ptchdbits.co,DIRECT
 HOST-SUFFIX,pterclub.com,DIRECT
 HOST-SUFFIX,pterclub.net,DIRECT
 HOST-SUFFIX,ptfans.org,DIRECT
+HOST-SUFFIX,ptlgs.org,DIRECT
 HOST-SUFFIX,ptfiles.net,DIRECT
 HOST-SUFFIX,pt.msg.vg,DIRECT
 HOST-SUFFIX,ptsbao.club,DIRECT
