Add hdarea.club to HOST-SUFFIX entries

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -28,6 +28,7 @@ HOST-SUFFIX,greatposterwall.com,DIRECT
 HOST-SUFFIX,haidan.video,DIRECT
 HOST-SUFFIX,hares.top,DIRECT
 HOST-SUFFIX,hdarea.co,DIRECT
+HOST-SUFFIX,hdarea.club,DIRECT
 HOST-SUFFIX,hdater.com,DIRECT
 HOST-SUFFIX,hdchina.org,DIRECT
 HOST-SUFFIX,hdcity.leniter.org,DIRECT
