Add crabpt.vip to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -18,6 +18,7 @@ HOST-SUFFIX,carpt.net,DIRECT
 HOST-SUFFIX,ccfbits.org,DIRECT
 HOST-SUFFIX,chdbits.co,DIRECT
 HOST-SUFFIX,credit.pt,DIRECT
+HOST-SUFFIX,crabpt.vip,DIRECT
 HOST-SUFFIX,cyanbug.net,DIRECT
 HOST-SUFFIX,discfan.net,DIRECT
 HOST-SUFFIX,dicmusic.com,DIRECT
