--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -44,6 +44,7 @@ HOST-SUFFIX,pt.hdpost.top,DIRECT
 HOST-SUFFIX,hdcity.city,DIRECT
 HOST-SUFFIX,hdroute.org,DIRECT
 HOST-SUFFIX,hdsens.com,DIRECT
+HOST-SUFFIX,hdkyl.in,DIRECT
 HOST-SUFFIX,hdsky.me,DIRECT
 HOST-SUFFIX,hdstreet.club,DIRECT
 HOST-SUFFIX,hdtime.org,DIRECT
