--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -90,6 +90,7 @@ HOST-SUFFIX,ptsbao.club,DIRECT
 HOST-SUFFIX,pt.skit.me,DIRECT
 HOST-SUFFIX,pttime.org,DIRECT
 HOST-SUFFIX,pthome.net,DIRECT
+HOST-SUFFIX,qingwapt.com,DIRECT
 HOST-SUFFIX,railgunpt.com,DIRECT
 HOST-SUFFIX,rainbowisland.net,DIRECT
 HOST-SUFFIX,redleaves.cc,DIRECT
