--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -87,6 +87,7 @@ HOST-SUFFIX,ptlgs.org,DIRECT
 HOST-SUFFIX,ptfiles.net,DIRECT
 HOST-SUFFIX,pt.msg.vg,DIRECT
 HOST-SUFFIX,ptsbao.club,DIRECT
+HOST-SUFFIX,pt.0ff.cc,DIRECT
 HOST-SUFFIX,pt.skit.me,DIRECT
 HOST-SUFFIX,pttime.org,DIRECT
 HOST-SUFFIX,pthome.net,DIRECT
