--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -23,6 +23,7 @@ HOST-SUFFIX,cyanbug.net,DIRECT
 HOST-SUFFIX,discfan.net,DIRECT
 HOST-SUFFIX,dicmusic.com,DIRECT
 HOST-SUFFIX,dragonbite.org,DIRECT
+HOST-SUFFIX,et8.org,DIRECT
 HOST-SUFFIX,pt.eastgame.org,DIRECT
 HOST-SUFFIX,fsm.name,DIRECT
 HOST-SUFFIX,gainbound.net,DIRECT
