Add gamegamept.com to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -27,6 +27,7 @@ HOST-SUFFIX,et8.org,DIRECT
 HOST-SUFFIX,pt.eastgame.org,DIRECT
 HOST-SUFFIX,fsm.name,DIRECT
 HOST-SUFFIX,gainbound.net,DIRECT
+HOST-SUFFIX,gamegamept.com,DIRECT
 HOST-SUFFIX,greatposterwall.com,DIRECT
 HOST-SUFFIX,haidan.video,DIRECT
 HOST-SUFFIX,hares.top,DIRECT
